Bug 118604 - [GTK3] Format button in chapter numbering cannot be clicked.
Summary: [GTK3] Format button in chapter numbering cannot be clicked.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.0.2
Keywords: bibisected, bisected, regression
: 118944 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-07-07 08:50 UTC by Hussam Al-Tayeb
Modified: 2018-07-26 12:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
chapter numbering dialog (48.76 KB, image/png)
2018-07-07 08:50 UTC, Hussam Al-Tayeb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hussam Al-Tayeb 2018-07-07 08:50:03 UTC
Created attachment 143373 [details]
chapter numbering dialog

The "Format" button in chapter numbering cannot be clicked.
I am using the latest build from https://dev-builds.libreoffice.org/daily/master/Linux-archive-x86_64@80-updater/current/
Comment 1 Jacques Guilleron 2018-07-07 09:26:08 UTC
Hi Hussam,

I don't reproduce with 
LO 6.2.0.0.alpha0+ Build ID: 54d76f5203aa5f3ef0e5afdca9d131dadeb3794e
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-07-05_00:58:40
Locale: fr-FR (fr_FR); Calc: CL
Comment 2 Hussam Al-Tayeb 2018-07-07 10:16:31 UTC
(In reply to Jacques Guilleron from comment #1)
> Hi Hussam,
> 
> I don't reproduce with 
> LO 6.2.0.0.alpha0+ Build ID: 54d76f5203aa5f3ef0e5afdca9d131dadeb3794e
> CPU threads: 2; OS: Windows 6.1; UI render: default; 
> TinderBox: Win-x86@42, Branch:master, Time: 2018-07-05_00:58:40
> Locale: fr-FR (fr_FR); Calc: CL

Yes, this is likely GTK+  vcl related. I should have mentioned that. Sorry.
Comment 3 Xisco Faulí 2018-07-07 12:52:00 UTC
So it worked fine up to 

https://cgit.freedesktop.org/libreoffice/core/commit/?id=b047ae6e5bde45555a20a9ad8b7d570d93496187

author	Caolán McNamara <caolanm@redhat.com>	2018-06-19 16:40:38 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-06-25 22:10:21 +0200
commit b047ae6e5bde45555a20a9ad8b7d570d93496187 (patch)
tree f8c13e7cb38b93f0cf2a86b2bde0519423fb628c
parent 86d02e1fde746988adc17c9e8480ae9967c5a299 (diff)
weld SwWatermarkDialog

when it started to crash. The crash was fixed in

author	Caolán McNamara <caolanm@redhat.com>	2018-06-26 09:33:50 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-06-26 15:51:49 +0200
commit 043701c56cae1e281e1be90a262caa14ed936867 (patch)
tree 1256e0a6d953fe8065170e60198978bd0ef61b1e
parent 60c5ca1b874ead7251653d01b0d50fdd42482e09 (diff)
support gtk < 3.20.0

but now 2 drop down menus are displayed for me with

libgtk-3-0:amd 3.18.9-1ubuntu

@Hussam-Al-Tayeb, which is you GTK3 version ?

Adding Cc: to Caolán McNamara
Comment 4 Hussam Al-Tayeb 2018-07-07 13:03:25 UTC
GTK+ 3.23
Comment 5 Hussam Al-Tayeb 2018-07-12 13:52:56 UTC
This is in 6-1 branch as well as far as I remember.
As a side note, is there any remaining reason to be using GTK3 < 3.20? WebKitGTK+, Firefox, and LibreOffice already adapted to the theme changes.
Comment 6 Commit Notification 2018-07-18 10:03:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=753314b102979b628d7ba77fb856a6e20771db33

Resolves: tdf#118604 only use popover workaround for popovers, not menus

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2018-07-18 10:05:56 UTC
backport to 6-1 in gerrit
Comment 8 Hussam Al-Tayeb 2018-07-18 15:26:22 UTC
@Caolán, I applied the patch to 6-1 locally. The text in the button is also not clear (on X11). It says "F...at".
Do I file a new bug?
Comment 9 Caolán McNamara 2018-07-18 15:35:37 UTC
no, that's a separate issue fixed by https://cgit.freedesktop.org/libreoffice/core/commit/?id=9e9138c09bd3d05ff45a6aabf574af897ef93a1e
Comment 10 Commit Notification 2018-07-18 19:07:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8923164778ecfbfd98a398d4525d7b88a06366ea&h=libreoffice-6-1

Resolves: tdf#118604 only use popover workaround for popovers, not menus

It will be available in 6.1.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2018-07-19 15:59:37 UTC
I don't understand what the button does, but at least it's displayed now in

Version: 6.2.0.0.alpha0+
Build ID: 95b00f1bfa341003af23e150d316d943d47909cf
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

@Caolán, Thanks for fixing this!!
Comment 12 Xisco Faulí 2018-07-26 12:16:40 UTC
*** Bug 118944 has been marked as a duplicate of this bug. ***