Resolves: tdf#118604 only use popover workaround for popovers, not menus

Change-Id: I7982a3836fbf699979beaa70e34bfa38aea80462